
  o Build Changes:
    * Improved handling of the "package=" keyword argument for build
      actions.  In particular, made it available to all build actions,
      removed double-applying macros to the package specification,
      and fixed failure in cases like "MakeInstall(dir=doesnotexist,
      skipMissingDir=True, package=...)". (CNY-737, CNY-738)

  o Server Changes:
    * ACL patterns now match to the end of the trove name instead of
      partial strings (CNY-719)

  o Bug Fixes:
    * The Conary repository server now invalidates changeset cache
      entries when adding a digital signature to a previously mirrored
      trove.
    * A bug that caused the mirror code to traceback when no callback
      function was provided to it has been fixed. (CNY-728)

Changes in 1.0.26:
  o Build Changes:
    * When cooking a group, adding "--debug" to the "cvc cook" command
      line now displays detailed information about why a component is
      being included to solve a dependency. (CNY-711)
    * The mirror:// functionality introduced in Conary 1.0.25 had two
      small bugs, one of which prevented mirror:// pseudo-URLs from
      working.  These bugs are now fixed, thanks to Pavel
      Volkovitskiy. (CNY-704)
    * The "cvc cook" command now announces which label it is building
      at the beginning of the cook, making it easier to catch mistakes
      early. Thanks to Pavel Volkovitskiy for this fix. (CNY-615)
    * The source actions (addSource, addArchive, etc.) can now take
      a "package=" argument like the build actions do.  Thanks to
      Pavel Volkovitskiy for contributing this capability.  (CNY-665)
    * The "preMake" option had a bad test for the ';' character; this
      test has been fixed and extended to include && and ||.
      thanks to Pavel Volkovitskiy for this fix. (CNY-580)
    * Many actions had a variety of options (dir=, subdir=, and
      subDir=) for specifying which directory to affect.  These have